# optimize-geo

./: .dockerignore  .env.example  .gitignore  API_AUTH.md  CLAUDE.md  DATABASE.md  Dockerfile  Makefile  README.md  docker-compose.yml  example_output.txt  pyproject.toml  pytest.ini  requirements.txt  tools.py  web_analyzer.py  website_analyzer.py  website_analyzer_cli.py  website_analyzer_lib.py  website_analyzer_server.py
.github/workflows/: tests.yml
alembic/: env.py  script.py.mako
alembic/sql/: 001_create_users_table_downgrade.sql  001_create_users_table_upgrade.sql  002_create_entity_table_downgrade.sql  002_create_entity_table_upgrade.sql  003_create_user_membership_table_downgrade.sql  003_create_user_membership_table_upgrade.sql
alembic/versions/: 0398f0f9a348_create_entity_table.py  a1dff0914356_create_users_table.py  b55d64201412_create_user_membership_table.py
scripts/: mongo-init.js  run_server.py  run_tests.py
src/: cli.py  db.py  main.py
src/api/: README.md  auth.py  dependencies.py  middleware.py
src/api/routers/: analyzer.py  auth.py  health.py
src/config/: settings.py
src/core/: auth.py  exceptions.py  workos_client.py
src/database/: README.md  __init__.py
src/database/mongo/: connection.py  models.py  repositories.py
src/database/postgres/: connection.py  models.py
src/models/: schemas.py
src/services/: analyzer.py
src/utils/: logging.py
tests/: README.md  conftest.py  test_health.py  test_performance.py
tests/fixtures/: mock_helpers.py  test_data.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_analyzer_service.py  test_auth.py  test_database_models.py  test_db.py  test_exceptions.py  test_logging.py  test_migrations.py  test_models.py  test_mongo_connection.py  test_mongo_models.py  test_session_context.py  test_workos_integration.py
